--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
-    <meta property="og:title" content="劉及人訃告">
+    <meta property="og:title" content="黃徐玉珠訃告">
     <meta property="og:description" content="追思黃徐玉珠雲端訃告">
     <meta property="og:image" content="https://shiangan.com/Shiangan/XuYuzhu/image/logo.jpg">
     <meta property="og:url" content="https://shiangan.com/Shiangan/XuYuzhu">
