--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
     
     <audio id="background-music" autoplay loop>
-        <source src="audio/珍珠港事件.mp3" type="audio/mpeg">
+        <source src="珍珠港事件.mp3" type="audio/mpeg">
         瀏覽器不支持音頻播放。
     </audio>
  
@@ -35,7 +35,7 @@
             <p id="life-story">
                 <strong>我們敬愛的親人，黃徐玉珠，於113年08月26日，早上08：50，在家人的陪伴下，安詳離世。</strong>
             </p>
-            <p>護喪妻 陳圓娟 率 孝男 克威 親視含殮 遵禮成服 豎靈於 台北懷愛館（原第二殯儀館）景行樓 3F 蓮位堂［I1-06]</p>
+            <p> 徐佳玲 親視含殮 遵禮成服 豎靈於 台北懷愛館（原第二殯儀館）景行樓 3F 蓮位堂［I1-06]</p>
             <p>將設奠於113年09月18日（三）舉行追思會儀式，感謝親友們的致意與陪伴，給予及人先生最真切的祝福，家人們銘記在心，衷心感謝。</p>
         </section>
 
