--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
     <meta property="og:title" content="黃徐玉珠訃告">
-    <meta property="og:description" content="追思黃徐玉珠雲端訃告">
+    <meta property="og:description" content="追思黃徐玉珠雲端訃告，敬邀您一同緬懷追思我們摯愛的親人">
     <meta property="og:image" content="https://shiangan.com/Shiangan/XuYuzhu/image/logo.jpg">
     <meta property="og:url" content="https://shiangan.com/Shiangan/XuYuzhu">
     <meta property="og:type" content="Shiangan-obituary">
@@ -35,8 +35,8 @@
             <p id="life-story">
                 <strong>我們敬愛的親人，黃徐玉珠，於113年08月26日，早上08：50，在家人的陪伴下，安詳離世。</strong>
             </p>
-            <p> 徐佳玲 親視含殮 遵禮成服 豎靈於 台北懷愛館（原第二殯儀館）景行樓 3F 蓮位堂［I1-06]</p>
-            <p>將設奠於113年09月18日（三）舉行追思會儀式，感謝親友們的致意與陪伴，給予及人先生最真切的祝福，家人們銘記在心，衷心感謝。</p>
+            <p>杖其夫 黃德堂 率 孝女 徐佳玲 親視含殮 遵禮成服 豎靈於 桃園 佛緣苑會館 15號 牌位區</p>
+            <p>將設奠於113年09月18日（三）舉行追思會儀式，感謝親友們的致意與陪伴，給予徐玉珠夫人最真切的祝福，家人們銘記在心，衷心感謝。</p>
         </section>
 
         <!-- 訃告紙本部分 -->
@@ -58,7 +58,7 @@
                 </div>
                 <div class="remembrance-item">
                     <h3><strong>出殯地點</strong></h3>
-                    <p><strong><a href="https://maps.app.goo.gl/QSBKvW1ugdhQwJDd6?g_st=com.google.maps.preview.copy" target="_blank">台北市懷愛館 3F 至仁一廳</a></strong></p>
+                    <p><strong><a href="https://maps.app.goo.gl/QSBKvW1ugdhQwJDd6?g_st=com.google.maps.preview.copy" target="_blank">桃園市立殯儀館 ［懷德廳］</a></strong></p>
                     <p><strong>地址：330桃園市桃園區大有路916號</a></strong></p>
                 </div>
                 <div class="remembrance-item">
@@ -88,9 +88,9 @@
         <div class="remembrance-thanks">
             <p class="fade-in-text"><strong>感謝親友們在這段時間的慰問與關心，您的關懷和鼓勵，陪伴我們度過了這段艱難的時光。</strong></p>
             <p class="fade-in-text"><strong> 敬邀您，與我們一同追思懷念黃徐玉珠女士的美好回憶，並向您獻上最深的敬意。</strong></p>
-            <p class="fade-in-text"><strong>謝謝您！鞠躬。</strong></p>
+            <p class="fade-in-text"><strong>謝謝您！全體家眷 深深鞠躬。</strong></p>
             
-                              <p class="fade-in-text">黃佳玲📞0973-935-148</p>
+                              <p class="fade-in-text">聯絡人 — 佳玲 0973-935-148</p>
                               
         </div>
 
