--- a/index.html
+++ b/index.html
@@ -305,13 +305,16 @@
         </section>
     </main>
 
+    <style>
     <!-- 页脚 -->
     <footer style="text-align: center;">
     <p>承辦禮儀公司 祥安生命有限公司 ｜ 禮儀師：陳妍如</p>
     <p>© 2024 劉及人訃聞公告 | <span class="footer-signature">祥安生命有限公司</span> 版權所有 |</p>
 </footer>
 
-     <style></style>
+        </style>
+
+    
 
     <!-- JavaScript -->
     <script>
