--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p id="life-story">
                 <strong>我們敬愛的親人，黃徐玉珠，於113年08月26日，早上08：50，在家人的陪伴下，安詳離世。</strong>
             </p>
-            <p>杖其夫 黃德堂 率 孝女 徐佳玲 親視含殮 遵禮成服 豎靈於 桃園 佛緣苑會館 15號 牌位區</p>
+            <p>杖其夫 黃德堂 率 孝女 佳玲 親視含殮 遵禮成服 豎靈於 桃園 <strong>佛緣苑會館 [牌位區15號］</strong></p>
             <p>將設奠於113年09月18日（三）舉行追思會儀式，感謝親友們的致意與陪伴，給予徐玉珠夫人最真切的祝福，家人們銘記在心，衷心感謝。</p>
         </section>
 
@@ -53,7 +53,7 @@
             <div class="remembrance-details">
                 <div class="remembrance-item">
                     <h3><strong>豎靈地點</strong></h3>
-                    <p><strong>桃園 佛緣苑會館 ［牌位區 15號］</strong></p>
+                    <p><strong><a href="https://maps.app.goo.gl/nrjV9YHrTAE9bbMX9?g_st=com.google.maps.preview.copy" target="_blank">桃園 佛緣苑會館 ［牌位區 15號］</a></strong></p>
                     <p><strong>地址：330桃園市桃園區大有路920號</a></strong></p>
                 </div>
                 <div class="remembrance-item">
@@ -105,65 +105,8 @@
     to {
         opacity: 1;
     }
-}</style>
-
-        <!-- 追思相片集 -->
-        <section>
-            <h2><strong>追思相片集</strong></h2>
-            <div class="slideshow">
-                <div class="slides">
-                    <div><img src="image/IMG_5394.jpeg" alt="照片1"></div>
-                    <div><img src="image/IMG_9495.jpeg" alt="照片2"></div>
-                </div>
-            </div>
-        </section>
-
-        <style>
-        /* 幻灯片容器 */
-        .slideshow {
-            width: 100%;
-            max-width: 80%; /* 确保幻灯片不会超出页面宽度 */
-            height: 50vh; /* 根据需求调整高度 */
-            overflow: hidden;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 auto; /* 居中对齐幻灯片 */
-            box-sizing: border-box; /* 包括内边距和边框在内的宽度和高度计算 */
-        }
-
-        /* 幻灯片内容 */
-        .slides {
-            display: flex;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            transition: transform 1s ease-in-out; /* 添加过渡效果 */
-        }
-
-        /* 每张幻灯片 */
-        .slides div {
-            flex-shrink: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        /* 幻灯片中的图片 */
-        .slides img {
-            width: 100%; /* 确保图片宽度适应容器 */
-            height: auto; /* 保持图片高度按比例缩放 */
-            max-height: 100%; /* 图片高度不能超过容器的高度 */
-            object-fit: contain; /* 确保图片适应容器且不会被裁剪 */
-        }
-    </style>
-</head>
-<body>
+}
+         </style>
 
 
 <script>
@@ -282,7 +225,7 @@
         
         <!-- 固定聯絡方式 -->
         <div id="fixed-links">
-            <a href="tel:0978583699" class="bold">
+            <a href="tel:0938179858" class="bold">
                 <img src="image/24小時專線.png" alt="24小時服務電話" style="width: 70px; height: 30px;">
             </a>
             <a href="https://line.me/ti/p/lAYTmfcqvp" target="_blank" class="bold">
@@ -305,14 +248,13 @@
         </section>
     </main>
 
-    <style>
+
     <!-- 页脚 -->
     <footer style="text-align: center;">
-    <p>承辦禮儀公司 祥安生命有限公司 ｜ 禮儀師：陳妍如</p>
-    <p>© 2024 劉及人訃聞公告 | <span class="footer-signature">祥安生命有限公司</span> 版權所有 |</p>
-</footer>
+    <p>承辦禮儀公司 祥安生命有限公司 ｜ 禮儀師：陳柏元</p>
+    <p>© 2024黃徐玉珠訃聞公告 | <span class="footer-signature">祥安生命有限公司</span> 版權所有 |</p>
+    </footer>
 
-        </style>
 
     
 
