--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <!-- 地圖嵌入 -->
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.6055113137354!2d121.55302529999999!3d25.0135172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442aa3b0390f463%3A0x9082f68f52193107!2z5Y-w5YyX5biC5oe35oSb6aSo!5e0!3m2!1szh-TW!2stw!4v1723546074779!5m2!1szh-TW!2stw"
+                    src="https://www.google.com/maps/place/330%E6%A1%83%E5%9C%92%E5%B8%82%E6%A1%83%E5%9C%92%E5%8D%80%E5%A4%A7%E6%9C%89%E8%B7%AF916%E8%99%9F%E6%A1%83%E5%9C%92%E5%B8%82%E6%94%BF%E5%BA%9C%E6%AE%AF%E8%91%AC%E7%AE%A1%E7%90%86%E6%89%80/@25.0215011,121.3145902,16z/data=!4m6!3m5!1s0x34681e361ce9b9c7:0xb4c3029db3d7b0b2!8m2!3d25.0215011!4d121.3145902!16s%2Fg%2F1w6r5_zy"
                     width="100%" 
                     height="450" 
                     style="border:0;" 
@@ -188,7 +188,8 @@
     <p><br>訂購花籃請點選<a href="https://line.me/ti/p/lAYTmfcqvp" target="_blank"><strong>這裡</strong></a>。</p>
 </section>
 
-        <style>#flower-basket-gallery {
+   <style>
+#flower-basket-gallery {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -228,7 +229,7 @@
             <a href="tel:0938179858" class="bold">
                 <img src="image/24小時專線.png" alt="24小時服務電話" style="width: 70px; height: 30px;">
             </a>
-            <a href="https://line.me/ti/p/lAYTmfcqvp" target="_blank" class="bold">
+            <a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank" class="bold">
                 <img src="image/IMG_4177.webp" alt="LINE 聯絡我們" style="width: 50px; height: 50px;">
             </a>
         </div>
@@ -238,10 +239,10 @@
             <img src="image/名片頁.jpg" alt="名片" class="business-card-img">
             <div id="share-buttons">
                 <p><strong>分享此頁面</strong></p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/Liu-Jiren/" target="_blank" class="share-btn fb-share-btn">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/XuYuzhu/" target="_blank" class="share-btn fb-share-btn">
                     <img src="image/fb.png" alt="Share on Facebook">
                 </a>
-                <a href="https://line.me/R/msg/text/?https://shiangan.github.io/Liu-Jiren/" target="_blank" class="share-btn line-share-btn">
+                <a href="https://line.me/R/msg/text/?https://shiangan.github.io/XuYuzhu/" target="_blank" class="share-btn line-share-btn">
                     <img src="image/line.png" alt="Share on Line">
                 </a>
             </div>
