--- a/index.html
+++ b/index.html
@@ -22,6 +22,43 @@
         <source src="珍珠港事件.mp3" type="audio/mpeg">
         瀏覽器不支持音頻播放。
     </audio>
+
+    <style>
+    /* 页脚部分的样式 */
+        footer {
+            background-color: #f4f4f4; /* 背景颜色 */
+            padding: 20px; /* 内边距 */
+            text-align: center; /* 文本居中 */
+            font-family: Arial, sans-serif; /* 字体 */
+        }
+
+        footer p {
+            margin: 5px 0; /* 上下外边距 */
+            color: #333; /* 文字颜色 */
+        }
+
+        .footer-signature {
+            font-weight: bold; /* 字体加粗 */
+        }
+
+        .bold {
+            font-weight: bold; /* 字体加粗 */
+            text-decoration: none; /* 去掉链接下划线 */
+        }
+
+        footer img {
+            vertical-align: middle; /* 图标垂直对齐 */
+        }
+
+        footer a {
+            margin: 0 10px; /* 图标间距 */
+        }
+
+        .fade-in-text {
+    opacity: 0; /* 初始透明度为0 */
+    transition: opacity 2s ease-in-out; /* 渐变效果 */
+}
+        </style>
  
     <header>
         <img src="image/logo.png" alt="Logo" class="logo">
@@ -90,7 +127,7 @@
             <p class="fade-in-text"><strong> 敬邀您，與我們一同追思懷念黃徐玉珠女士的美好回憶，並向您獻上最深的敬意。</strong></p>
             <p class="fade-in-text"><strong>謝謝您！全體家眷 深深鞠躬。</strong></p>
             
-                              <p class="fade-in-text">聯絡人 — 佳玲 0973-935-148</p>
+                 <p class="fade-in-text"><strong>聯絡人 — 佳玲 0973-935-148</strong></p>
                               
         </div>
 
@@ -253,7 +290,7 @@
     <!-- 页脚 -->
     <footer style="text-align: center;">
     <p>承辦禮儀公司 祥安生命有限公司 ｜ 禮儀師：陳柏元</p>
-    <p>© 2024黃徐玉珠訃聞公告 | <span class="footer-signature">祥安生命有限公司</span> 版權所有 |</p>
+    <p>© 2024黃徐玉珠訃聞公告 | <span class="footer-signature">祥安生命有限公司</span>版權所有 |</p>
     </footer>
 
 
