--- a/index.html
+++ b/index.html
@@ -158,15 +158,15 @@
             <a href="javascript:void(0);" id="show-flower-baskets" class="btn"><strong>致贈花籃選項</strong></a>
             <div id="flower-basket-gallery" style="display: none;">
                 <div class="flower-basket-item">
-                    <img src="image/花籃A.png" alt="花籃A">
+                    <img src="image/花籃A.JPG" alt="花籃A">
                     <p class="price"><strong>花籃A：NTD 2,500/對</strong></p>
                 </div>
                 <div class="flower-basket-item">
-                    <img src="image/花籃B.png" alt="花籃B">
+                    <img src="image/花籃B.JPG" alt="花籃B">
                     <p class="price"><strong>花籃B：NTD 3,000/對</strong></p>
                 </div>
                 <div class="flower-basket-item">
-                    <img src="image/花籃C.png" alt="花籃C">
+                    <img src="image/花籃C.JPG" alt="花籃C">
                     <p class="price"><strong>花籃C：NTD 3,500/對</strong></p>
                 </div>
             </div>
