--- a/index.html
+++ b/index.html
@@ -151,55 +151,86 @@
             <p class="fade-in-text"><strong>聯絡人 — 佳玲 0973-935-148</strong></p>
         </div>
 
-        <!-- 致贈花籃部分 -->
-        <section id="donate-flower">
-            <h2><strong>致贈花籃</strong></h2>
-            <p>為求會場一致性，致贈花籃請參見以下選項：</p>
-            <a href="javascript:void(0);" id="show-flower-baskets" class="btn"><strong>致贈花籃選項</strong></a>
-            <div id="flower-basket-gallery" style="display: none;">
-                <div class="flower-basket-item">
-                    <img src="image/花籃A.JPG" alt="花籃A">
-                    <p class="price"><strong>花籃A：NTD 2,500/對</strong></p>
-                </div>
-                <div class="flower-basket-item">
-                    <img src="image/花籃B.JPG" alt="花籃B">
-                    <p class="price"><strong>花籃B：NTD 3,000/對</strong></p>
-                </div>
-                <div class="flower-basket-item">
-                    <img src="image/花籃C.JPG" alt="花籃C">
-                    <p class="price"><strong>花籃C：NTD 3,500/對</strong></p>
-                </div>
+            <!-- 致贈花籃部分 -->
+<section id="donate-flower">
+    <h2><strong>致贈花籃，送上一份祝福</strong></h2>
+    <p>為求會場一致性，致贈花籃請參見以下選項：</p>
+    <a href="javascript:void(0);" id="show-flower-baskets" class="btn"><strong>致贈花籃</strong></a>
+
+    <!-- 花篮画廊，默认隐藏 -->
+    <div id="flower-basket-gallery" style="display: none;">
+        <div class="flower-basket-item">
+            <a href="花籃A.JPG" data-lightbox="flower-baskets" data-title="A款NT$2,500/1對">
+                <img src="花籃A.JPG" alt="花籃A">
+            </a>
+            <p class="price"><strong>A款NT$2,500/1對</strong></p>
+        </div>
+        <div class="flower-basket-item">
+            <a href="花籃B.JPG" data-lightbox="flower-baskets" data-title="B款NT$3,000/1對">
+                <img src="花籃B.JPG" alt="花籃B">
+            </a>
+            <p class="price"><strong>B款NT$3,000/1對</strong></p>
+        </div>
+         <div class="flower-basket-item">
+            <a href="花籃C.JPG" data-lightbox="flower-baskets" data-title="C款NT$3,500/1對">
+                <img src="花籃C.JPG" alt="花籃C">
+            </a>
+            <p class="price"><strong>C款NT$3,500/1對</strong></p>
+        </div>
+         <div class="flower-basket-item">
+            <a href="花籃D.JPG" data-lightbox="flower-baskets" data-title="D款NT$4,000/1對">
+                <img src="花籃D.JPG" alt="花籃D">
+            </a>
+            <p class="price"><strong>D款NT$4,000/1對</strong></p>
+        </div>
+         <div class="flower-basket-item">
+            <a href="花籃E.JPG" data-lightbox="flower-baskets" data-title="E款NT$4,500/1對">
+                <img src="花籃E.JPG" alt="花籃E">
+            </a>
+            <p class="price"><strong>E款NT$5,000/1對</strong></p>
+        </div>
+         <div class="flower-basket-item">
+            <a href="花籃F.JPG" data-lightbox="flower-baskets" data-title="F款NT$5,500/1對">
+                <img src="花籃F.JPG" alt="花籃F">
+            </a>
+            <p class="price"><strong>F款NT$5,500/1對</strong></p>
+        </div>
+         <div class="flower-basket-item">
+            <a href="花籃G.JPG" data-lightbox="flower-baskets" data-title="G款NT$6,000/1對">
+                <img src="花籃G.JPG" alt="花籃G">
+            </a>
+            <p class="price"><strong>G款NT$6,000/1對</strong></p>
+        </div>
+         <div class="flower-basket-item">
+            <a href="花籃H.JPG" data-lightbox="flower-baskets" data-title="H款NT$6,500/1對">
+                <img src="花籃H.JPG" alt="花籃H">
+            </a>
+            <p class="price"><strong>H款NT$6,500/1對</strong></p>
+        </div>
+        <!-- 其他花篮项... -->
+    </div>
+    <p><br>訂購花籃請點選<a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank"><strong>這裡</strong></a>。</p>
+</section>
+        <!-- 名片及分享按钮部分 -->
+        <section id="business-card">
+            <img src="未命名設計.png" alt="名片" class="business-card-img">
+            <div id="share-buttons">
+                <p><strong>分享此頁面</strong></p>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/Li-Zhengguo/" target="_blank" class="share-btn fb-share-btn">
+                    <img src="fb.png" alt="Share on Facebook">
+                </a>
+                <a href="https://line.me/R/msg/text/?https://shiangan.github.io/Li-Zhengguo/" target="_blank" class="share-btn line-share-btn">
+                    <img src="line.png" alt="Share on Line">
+                </a>
             </div>
         </section>
     </main>
 
-    <!-- 頁腳部分 -->
-    <footer>
-        <p><strong>佛緣苑會館</strong></p>
-        <p class="footer-signature"><strong>地址：330桃園市桃園區大有路920號</strong></p>
-        <p class="footer-signature"><strong>電話：(03) 325-4545</strong></p>
-        <p><strong>© 2024 佛緣苑會館. 保留所有權利.</strong></p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script>
-        // 設定 Slick 幻燈片
-        $(document).ready(function () {
-            $('#flower-basket-gallery').slick({
-                slidesToShow: 3,
-                slidesToScroll: 1,
-                autoplay: true,
-                autoplaySpeed: 2000,
-                arrows: true,
-                dots: true,
-            });
-
-            // 顯示花籃選項
-            $('#show-flower-baskets').on('click', function () {
-                $('#flower-basket-gallery').slideToggle();
-            });
-        });
+    <!-- 页脚 -->
+    <footer style="text-align: center;">
+    <p>承辦禮儀公司 祥安生命有限公司 ｜ 禮儀師：陳柏元</p>
+    <p>© 2024 李政國訃聞公告 | <span class="footer-signature">祥安生命有限公司</span> 版權所有 |</p>
+</footer>
 
         // 淡入效果
         $(window).on('load', function () {
