--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
             <img src="未命名設計.png" alt="名片" class="business-card-img">
             <div id="share-buttons">
                 <p><strong>分享此頁面</strong></p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/Li-Zhengguo/" target="_blank" class="share-btn fb-share-btn">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/XuYuZhu/" target="_blank" class="share-btn fb-share-btn">
                     <img src="fb.png" alt="Share on Facebook">
                 </a>
-                <a href="https://line.me/R/msg/text/?https://shiangan.github.io/Li-Zhengguo/" target="_blank" class="share-btn line-share-btn">
+                <a href="https://line.me/R/msg/text/?https://shiangan.github.io/XuYuZhu/" target="_blank" class="share-btn line-share-btn">
                     <img src="line.png" alt="Share on Line">
                 </a>
             </div>
@@ -229,9 +229,10 @@
     <!-- 页脚 -->
     <footer style="text-align: center;">
     <p>承辦禮儀公司 祥安生命有限公司 ｜ 禮儀師：陳柏元</p>
-    <p>© 2024 李政國訃聞公告 | <span class="footer-signature">祥安生命有限公司</span> 版權所有 |</p>
+    <p>© 2024 訃聞公告 | <span class="footer-signature">祥安生命有限公司</span> 版權所有 |</p>
 </footer>
-
+    
+<script>
         // 淡入效果
         $(window).on('load', function () {
             $('.fade-in-text').css('opacity', '1');
