--- a/index.html
+++ b/index.html
@@ -213,14 +213,14 @@
 </section>
         <!-- 名片及分享按钮部分 -->
         <section id="business-card">
-            <img src="未命名設計.png" alt="名片" class="business-card-img">
+            <img src="image/未命名設計.png" alt="名片" class="business-card-img">
             <div id="share-buttons">
                 <p><strong>分享此頁面</strong></p>
                 <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/XuYuZhu/" target="_blank" class="share-btn fb-share-btn">
-                    <img src="fb.png" alt="Share on Facebook">
+                    <img src="image/fb.png" alt="Share on Facebook">
                 </a>
                 <a href="https://line.me/R/msg/text/?https://shiangan.github.io/XuYuZhu/" target="_blank" class="share-btn line-share-btn">
-                    <img src="line.png" alt="Share on Line">
+                    <img src="image/line.png" alt="Share on Line">
                 </a>
             </div>
         </section>
