--- a/index.html
+++ b/index.html
@@ -231,6 +231,17 @@
     <p>承辦禮儀公司 祥安生命有限公司 ｜ 禮儀師：陳柏元</p>
     <p>© 2024 訃聞公告 | <span class="footer-signature">祥安生命有限公司</span> 版權所有 |</p>
 </footer>
+    <style>
+    footer {
+    font-family: '華康鋼筆體.ttc', sans-serif;
+    padding: 8px 0;
+    font-size: 0.85em;
+    background-color: #f9f9f9;
+    border-top: 1px solid #dcdcdc;
+    text-align: center;
+    margin-top: 20px;
+}
+        </style>
     
 <script>
         // 淡入效果
