--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 </footer>
     <style>
     footer {
-    font-family: '華康鋼筆體.ttc', sans-serif;
+    font-family: '华康钢笔体W2.ttc', sans-serif;
     padding: 8px 0;
     font-size: 0.85em;
     background-color: #f9f9f9;
