--- a/index.html
+++ b/index.html
@@ -143,88 +143,150 @@
             </div>
         </section>
 
-        <!-- 感謝信息部分 -->
-        <div class="remembrance-thanks">
-            <p class="fade-in-text"><strong>感謝親友們在這段時間的慰問與關心，您的關懷和鼓勵，陪伴我們度過了這段艱難的時光。</strong></p>
-            <p class="fade-in-text"><strong> 敬邀您，與我們一同追思懷念黃徐玉珠女士的美好回憶，並向您獻上最深的敬意。</strong></p>
-            <p class="fade-in-text"><strong>謝謝您！全體家眷 深深鞠躬。</strong></p>
-            <p class="fade-in-text"><strong>聯絡人 — 佳玲 0973-935-148</strong></p>
-        </div>
+       <div class="fade-in-container">
+    <p class="fade-in-text">感謝親友們在這段時間的慰問與關心，您的關懷和鼓勵，陪伴我們度過了這段艱難的時光。</p>
+    <p class="fade-in-text">敬邀您，與我們一同追思懷念黃徐玉珠女士的美好回憶，並向您獻上最深的敬意。</p>
+    <p class="fade-in-text">謝謝您！全體家眷 深深鞠躬。</p>
+</div>
+        <style>
+            /* 动态显示效果 */
+.fade-in-container {
+    text-align: center; /* 中心对齐 */
+}
 
-            <!-- 致贈花籃部分 -->
+.fade-in-text {
+    opacity: 0; /* 初始透明度为0 */
+    animation: fadeIn 2s forwards; /* 应用动画效果 */
+    margin: 10px 0; /* 每段文本上下间距 */
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(10px); /* 轻微向上移动 */
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0); /* 返回原位 */
+    }
+}
+            </style>
+
+        <scripts>document.addEventListener('DOMContentLoaded', function() {
+    const fadeInTexts = document.querySelectorAll('.fade-in-text');
+    fadeInTexts.forEach((text, index) => {
+        setTimeout(() => {
+            text.style.opacity = '1';
+        }, index * 2000); // 每段延迟2秒
+    });
+});</scripts>
+        
+<!-- 花籃選項 -->
 <section id="donate-flower">
-    <h2><strong>致贈花籃，送上一份祝福</strong></h2>
+    <h2><strong>致贈花籃</strong></h2>
     <p>為求會場一致性，致贈花籃請參見以下選項：</p>
     <a href="javascript:void(0);" id="show-flower-baskets" class="btn"><strong>致贈花籃</strong></a>
 
-    <!-- 花篮画廊，默认隐藏 -->
+    <!-- 花籃畫廊，默認隱藏 -->
     <div id="flower-basket-gallery" style="display: none;">
         <div class="flower-basket-item">
-            <a href="花籃A.JPG" data-lightbox="flower-baskets" data-title="A款NT$2,500/1對">
-                <img src="花籃A.JPG" alt="花籃A">
+            <a href="image/花籃A.JPG" data-lightbox="flower-baskets" data-title="A款NT$2,500/1對">
+                <img src="image/花籃A.JPG" alt="花籃A">
             </a>
             <p class="price"><strong>A款NT$2,500/1對</strong></p>
         </div>
         <div class="flower-basket-item">
-            <a href="花籃B.JPG" data-lightbox="flower-baskets" data-title="B款NT$3,000/1對">
-                <img src="花籃B.JPG" alt="花籃B">
+            <a href="image/花籃B.JPG" data-lightbox="flower-baskets" data-title="B款NT$3,000/1對">
+                <img src="image/花籃B.JPG" alt="花籃B">
             </a>
             <p class="price"><strong>B款NT$3,000/1對</strong></p>
         </div>
-         <div class="flower-basket-item">
-            <a href="花籃C.JPG" data-lightbox="flower-baskets" data-title="C款NT$3,500/1對">
-                <img src="花籃C.JPG" alt="花籃C">
+        <div class="flower-basket-item">
+            <a href="image/花籃C.JPG" data-lightbox="flower-baskets" data-title="C款NT$3,500/1對">
+                <img src="image/花籃C.JPG" alt="花籃C">
             </a>
             <p class="price"><strong>C款NT$3,500/1對</strong></p>
         </div>
-         <div class="flower-basket-item">
-            <a href="花籃D.JPG" data-lightbox="flower-baskets" data-title="D款NT$4,000/1對">
-                <img src="花籃D.JPG" alt="花籃D">
+        <div class="flower-basket-item">
+            <a href="image/花籃D.JPG" data-lightbox="flower-baskets" data-title="D款NT$4,000/1對">
+                <img src="image/花籃D.JPG" alt="花籃D">
             </a>
             <p class="price"><strong>D款NT$4,000/1對</strong></p>
         </div>
-         <div class="flower-basket-item">
-            <a href="花籃E.JPG" data-lightbox="flower-baskets" data-title="E款NT$4,500/1對">
-                <img src="花籃E.JPG" alt="花籃E">
+        <div class="flower-basket-item">
+            <a href="image/花籃E.JPG" data-lightbox="flower-baskets" data-title="E款NT$5,000/1對">
+                <img src="image/花籃E.JPG" alt="花籃E">
             </a>
             <p class="price"><strong>E款NT$5,000/1對</strong></p>
         </div>
-         <div class="flower-basket-item">
-            <a href="花籃F.JPG" data-lightbox="flower-baskets" data-title="F款NT$5,500/1對">
-                <img src="花籃F.JPG" alt="花籃F">
+        <div class="flower-basket-item">
+            <a href="image/花籃F.JPG" data-lightbox="flower-baskets" data-title="F款NT$5,500/1對">
+                <img src="image/花籃F.JPG" alt="花籃F">
             </a>
             <p class="price"><strong>F款NT$5,500/1對</strong></p>
         </div>
-         <div class="flower-basket-item">
-            <a href="花籃G.JPG" data-lightbox="flower-baskets" data-title="G款NT$6,000/1對">
-                <img src="花籃G.JPG" alt="花籃G">
+        <div class="flower-basket-item">
+            <a href="image/花籃G.JPG" data-lightbox="flower-baskets" data-title="G款NT$6,000/1對">
+                <img src="image/花籃G.JPG" alt="花籃G">
             </a>
             <p class="price"><strong>G款NT$6,000/1對</strong></p>
         </div>
-         <div class="flower-basket-item">
-            <a href="花籃H.JPG" data-lightbox="flower-baskets" data-title="H款NT$6,500/1對">
-                <img src="花籃H.JPG" alt="花籃H">
+        <div class="flower-basket-item">
+                        <a href="image/花籃H.JPG" data-lightbox="flower-baskets" data-title="H款NT$6,500/1對">
+                <img src="image/花籃H.JPG" alt="花籃H">
             </a>
             <p class="price"><strong>H款NT$6,500/1對</strong></p>
         </div>
-        <!-- 其他花篮项... -->
     </div>
-    <p><br>訂購花籃請點選<a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank"><strong>這裡</strong></a>。</p>
+    <p>訂購花籃請點選<a href="https://line.me/ti/p/lAYTmfcqvp" target="_blank"><strong>這裡</strong></a>。</p>
 </section>
-        <!-- 名片及分享按钮部分 -->
-        <section id="business-card">
-            <img src="image/未命名設計.png" alt="名片" class="business-card-img">
-            <div id="share-buttons">
-                <p><strong>分享此頁面</strong></p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/XuYuZhu/" target="_blank" class="share-btn fb-share-btn">
-                    <img src="image/fb.png" alt="Share on Facebook">
-                </a>
-                <a href="https://line.me/R/msg/text/?https://shiangan.github.io/XuYuZhu/" target="_blank" class="share-btn line-share-btn">
-                    <img src="image/line.png" alt="Share on Line">
-                </a>
-            </div>
-        </section>
-    </main>
+
+<!-- 固定聯絡方式 -->
+<div id="fixed-links">
+    <a href="tel:0938179858" class="bold">
+        <img src="image/24小時專線.png" alt="24小時服務電話" style="width: 70px; height: 30px;">
+    </a>
+    <a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank" class="bold">
+        <img src="image/IMG_4177.webp" alt="LINE 聯絡我們" style="width: 50px; height: 50px;">
+    </a>
+</div>
+
+<!-- 名片及分享按鈕部分 -->
+<section id="business-card">
+    <img src="image/名片頁.jpg" alt="名片" class="business-card-img">
+    <div id="share-buttons">
+        <p><strong>分享此頁面</strong></p>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/XuYuzhu/" target="_blank" class="share-btn fb-share-btn">
+            <img src="image/fb.png" alt="Share on Facebook">
+        </a>
+        <a href="https://line.me/R/msg/text/?https://shiangan.github.io/XuYuzhu/" target="_blank" class="share-btn line-share-btn">
+            <img src="image/line.png" alt="Share on Line">
+        </a>
+    </div>
+</section>
+
+<!-- 頁腳 -->
+<footer style="text-align: center;">
+    <p>承辦禮儀公司 祥安生命有限公司 ｜ 禮儀師：陳柏元</p>
+    <p>© 2024 黃徐玉珠訃聞公告 | <span class="footer-signature">祥安生命有限公司</span>版權所有</p>
+</footer>
+
+<!-- JavaScript -->
+<script>
+    // 顯示/隱藏花籃畫廊
+    document.getElementById('show-flower-baskets').addEventListener('click', function() {
+        const gallery = document.getElementById('flower-basket-gallery');
+        gallery.style.display = gallery.style.display === 'none' ? 'flex' : 'none';
+    });
+
+    // 渐显文本效果
+    const fadeInTexts = document.querySelectorAll('.fade-in-text');
+    fadeInTexts.forEach((text, index) => {
+        setTimeout(() => {
+            text.style.opacity = '1';
+        }, index * 1500); // 每段延迟1.5秒
+    });
+</script>
 
     <!-- 页脚 -->
     <footer style="text-align: center;">
