--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="李政國訃告">
-    <meta property="og:description" content="追思李政國先生-雲端訃聞">
-    <meta property="og:image" content="https://shiangan.com/Shiangan/Liu-Jiren/image/logo.jpg">
-    <meta property="og:url" content="https://shiangan.com/Shiangan/Liu-Jiren">
+    <meta property="og:title" content="黃徐玉珠訃告">
+    <meta property="og:description" content="追思黃徐玉珠女士-敬邀您一同緬懷，送上祝福，陪伴摯愛的親人。祥安生命雲端訃聞">
+    <meta property="og:image" content="https://shiangan.com/Shiangan/XuYUzhu/image/logo.jpg">
+    <meta property="og:url" content="https://shiangan.com/Shiangan/XuYUzhu">
     <meta property="og:type" content="website">
     <title>訃聞公告</title>
     <link rel="stylesheet" href="obituary.css">
@@ -66,7 +66,7 @@
 
     <header>
         <img src="logo.png" alt="Logo" class="logo">
-        <h1>李政國先生 訃告</h1>
+        <h1>徐玉珠女士 訃告</h1>
     </header>
 
     <main>
@@ -142,50 +142,50 @@
     <!-- 花篮画廊，默认隐藏 -->
     <div id="flower-basket-gallery" style="display: none;">
         <div class="flower-basket-item">
-            <a href="花籃A.JPG" data-lightbox="flower-baskets" data-title="A款NT$2,500/1對">
-                <img src="花籃A.JPG" alt="花籃A">
+            <a href="image/花籃A.JPG" data-lightbox="flower-baskets" data-title="A款NT$2,500/1對">
+                <img src="image/花籃A.JPG" alt="花籃A">
             </a>
             <p class="price"><strong>A款NT$2,500/1對</strong></p>
         </div>
         <div class="flower-basket-item">
-            <a href="花籃B.JPG" data-lightbox="flower-baskets" data-title="B款NT$3,000/1對">
-                <img src="花籃B.JPG" alt="花籃B">
+            <a href="image/花籃B.JPG" data-lightbox="flower-baskets" data-title="B款NT$3,000/1對">
+                <img src="image/花籃B.JPG" alt="花籃B">
             </a>
             <p class="price"><strong>B款NT$3,000/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="花籃C.JPG" data-lightbox="flower-baskets" data-title="C款NT$3,500/1對">
-                <img src="花籃C.JPG" alt="花籃C">
+            <a href="image/花籃C.JPG" data-lightbox="flower-baskets" data-title="C款NT$3,500/1對">
+                <img src="image/花籃C.JPG" alt="花籃C">
             </a>
             <p class="price"><strong>C款NT$3,500/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="花籃D.JPG" data-lightbox="flower-baskets" data-title="D款NT$4,000/1對">
-                <img src="花籃D.JPG" alt="花籃D">
+            <a href="image/花籃D.JPG" data-lightbox="flower-baskets" data-title="D款NT$4,000/1對">
+                <img src="image/花籃D.JPG" alt="花籃D">
             </a>
             <p class="price"><strong>D款NT$4,000/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="花籃E.JPG" data-lightbox="flower-baskets" data-title="E款NT$4,500/1對">
-                <img src="花籃E.JPG" alt="花籃E">
+            <a href="image/花籃E.JPG" data-lightbox="flower-baskets" data-title="E款NT$4,500/1對">
+                <img src="image/花籃E.JPG" alt="花籃E">
             </a>
             <p class="price"><strong>E款NT$5,000/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="花籃F.JPG" data-lightbox="flower-baskets" data-title="F款NT$5,500/1對">
-                <img src="花籃F.JPG" alt="花籃F">
+            <a href="image/花籃F.JPG" data-lightbox="flower-baskets" data-title="F款NT$5,500/1對">
+                <img src="image/花籃F.JPG" alt="花籃F">
             </a>
             <p class="price"><strong>F款NT$5,500/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="花籃G.JPG" data-lightbox="flower-baskets" data-title="G款NT$6,000/1對">
-                <img src="花籃G.JPG" alt="花籃G">
+            <a href="image/花籃G.JPG" data-lightbox="flower-baskets" data-title="G款NT$6,000/1對">
+                <img src="image/花籃G.JPG" alt="花籃G">
             </a>
             <p class="price"><strong>G款NT$6,000/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="花籃H.JPG" data-lightbox="flower-baskets" data-title="H款NT$6,500/1對">
-                <img src="花籃H.JPG" alt="花籃H">
+            <a href="image/花籃H.JPG" data-lightbox="flower-baskets" data-title="H款NT$6,500/1對">
+                <img src="image/花籃H.JPG" alt="花籃H">
             </a>
             <p class="price"><strong>H款NT$6,500/1對</strong></p>
         </div>
@@ -195,14 +195,14 @@
 </section>
         <!-- 名片及分享按钮部分 -->
         <section id="business-card">
-            <img src="未命名設計.png" alt="名片" class="business-card-img">
+            <img src="image/未命名設計.png" alt="名片" class="business-card-img">
             <div id="share-buttons">
                 <p><strong>分享此頁面</strong></p>
                 <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/XuYuzhu/" target="_blank" class="share-btn fb-share-btn">
-                    <img src="fb.png" alt="Share on Facebook">
+                    <img src="image/fb.png" alt="Share on Facebook">
                 </a>
                 <a href="https://line.me/R/msg/text/?https://shiangan.github.io/XuYuzhu/" target="_blank" class="share-btn line-share-btn">
-                    <img src="line.png" alt="Share on Line">
+                    <img src="image/line.png" alt="Share on Line">
                 </a>
             </div>
         </section>
