--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="黃徐玉珠訃告">
     <meta property="og:description" content="追思黃徐玉珠女士-敬邀您一同緬懷，送上祝福，陪伴摯愛的親人。祥安生命雲端訃聞">
-    <meta property="og:image" content="https://shiangan.com/Shiangan/XuYUzhu/image/logo.jpg">
-    <meta property="og:url" content="https://shiangan.com/Shiangan/XuYUzhu">
+    <meta property="og:image" content="https://shiangan.com/Shiangan/XuYuzhu/image/logo.jpg">
+    <meta property="og:url" content="https://shiangan.com/Shiangan/XuYuzhu">
     <meta property="og:type" content="website">
     <title>訃聞公告</title>
     <link rel="stylesheet" href="obituary.css">
@@ -76,7 +76,7 @@
             <p id="life-story">
                 <strong>我們敬愛的親人，黃徐玉珠夫人，於113年08月26日（一），上午08：55，在家人的陪伴下，安詳離世。</strong>
             </p>
-                 <p>杖其夫 黃德堂 率 孝女 佳玲 親視含殮 遵禮成服 豎靈於 <strong> ［桃園 佛緣苑會館 牌位區 15號 ］</strong>
+                 <p>杖期夫 黃德堂 率 孝女 佳玲 親視含殮 遵禮成服 豎靈於 <strong> ［桃園 佛緣苑會館 牌位區 15號 ］</strong>
                  <p>將設奠於113年09月18日（三）舉行追思會儀式，感謝親友們在這段時間的慰問與關心，您的關懷和鼓勵，陪伴我們度過了這段艱難的時光。</p>
                          <p><strong>敬邀您，與我們一同追思懷念政國先生，並向您獻上最深的敬意，感謝您。</strong></p>
                                             <p><strong>家人們，銘記在心，衷心感謝。</strong></p>
