--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
         .fade-in-text {
     opacity: 0; /* 初始透明度为0 */
     transition: opacity 2s ease-in-out; /* 渐变
+        }
+  
     <!-- 固定聯絡方式 -->
         <div id="fixed-links">
             <a href="tel:0938179858" class="bold">
-                <img src="24小時專線.png" alt="24小時服務電話" style="width: 70px; height: 30px;">
+                <img src="24小時專線.png" alt="24小時服務電話">
             </a>
             <a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank" class="bold">
                 <img src="IMG_4177.webp" alt="LINE 聯絡我們" style="width: 50px; height: 50px;">
@@ -76,7 +78,7 @@
             <p id="life-story">
                 <strong>我們敬愛的親人，黃徐玉珠夫人，於113年08月26日（一），上午08：55，在家人的陪伴下，安詳離世。</strong>
             </p>
-                 <p>杖期夫 黃德堂 率 孝女 佳玲 親視含殮 遵禮成服 豎靈於 <strong> ［桃園 佛緣苑會館 牌位區 15號 ］</strong>
+                 <p>杖期夫 黃德堂 率 孝女 佳玲 親視含殮 遵禮成服 豎靈於 <strong> ［桃園 佛緣苑會館 牌位區 15號 ］</strong></p>
                  <p>將設奠於113年09月18日（三）舉行追思會儀式，感謝親友們在這段時間的慰問與關心，您的關懷和鼓勵，陪伴我們度過了這段艱難的時光。</p>
                          <p><strong>敬邀您，與我們一同追思懷念政國先生，並向您獻上最深的敬意，感謝您。</strong></p>
                                             <p><strong>家人們，銘記在心，衷心感謝。</strong></p>
