--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="黃徐玉珠訃告">
-    <meta property="og:description" content="追思黃徐玉珠女士-敬邀您一同緬懷，送上祝福，陪伴摯愛的親人。祥安生命雲端訃聞">
-    <meta property="og:image" content="https://shiangan.com/Shiangan/XuYuzhu/image/logo.jpg">
-    <meta property="og:url" content="https://shiangan.com/Shiangan/XuYuzhu">
+    <meta property="og:description" content="追思黃徐玉珠夫人-祥安生命雲端訃聞,敬邀您一同追思緬懷我們摯愛的親人">
+    <meta property="og:image" content="https://shiangan.com/Shiangan/Liu-Jiren/image/logo.jpg">
+    <meta property="og:url" content="https://shiangan.com/Shiangan/Liu-Jiren">
     <meta property="og:type" content="website">
     <title>訃聞公告</title>
     <link rel="stylesheet" href="obituary.css">
@@ -47,13 +47,63 @@
 
         .fade-in-text {
     opacity: 0; /* 初始透明度为0 */
-    transition: opacity 2s ease-in-out; /* 渐变
+    transition: opacity 2s ease-in-out; /* 渐变效果 */
+}
+
+        /* 幻灯片样式 */
+        .slideshow-container {
+            position: relative;
+            max-width: 100%; /* 确保幻灯片不会超出页面宽度 */
+            margin: auto;
         }
-  
+
+        .slide {
+            display: none; /* 隐藏幻灯片 */
+            text-align: center;
+        }
+
+        .slide img {
+            width: 100%; /* 确保图片适应幻灯片容器 */
+            height: auto; /* 保持图片比例 */
+        }
+
+        .prev, .next {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            width: auto;
+            padding: 16px;
+            margin-top: -22px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 18px;
+            transition: 0.6s ease;
+            border-radius: 0 3px 3px 0;
+            user-select: none;
+        }
+
+        .next {
+            right: 0;
+            border-radius: 3px 0 0 3px;
+        }
+
+        .prev:hover, .next:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+
+        /* 响应式设计：在小屏幕上的页脚样式 */
+        @media (max-width: 768px) {
+            footer {
+                font-size: 12px; /* 小屏幕上的字体大小 */
+                padding: 15px; /* 内边距稍微缩小 */
+            }
+        }
+    </style>
+</head>
     <!-- 固定聯絡方式 -->
         <div id="fixed-links">
             <a href="tel:0938179858" class="bold">
-                <img src="24小時專線.png" alt="24小時服務電話">
+                <img src="24小時專線.png" alt="24小時服務電話" style="width: 70px; height: 30px;">
             </a>
             <a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank" class="bold">
                 <img src="IMG_4177.webp" alt="LINE 聯絡我們" style="width: 50px; height: 50px;">
@@ -68,26 +118,27 @@
 
     <header>
         <img src="logo.png" alt="Logo" class="logo">
-        <h1>徐玉珠女士 訃告</h1>
+        <h1>黃徐玉珠 夫人 訃告</h1>
     </header>
 
     <main>
         <!-- 主要照片部分 -->
         <section class="main-photo-section">
-            <img id="main-photo" src="黃徐玉珠的主要照片.jpeg" alt="追思照片">
+            <img id="main-photo" src="李政國的主要照片.jpeg" alt="追思照片">
             <p id="life-story">
-                <strong>我們敬愛的親人，黃徐玉珠夫人，於113年08月26日（一），上午08：55，在家人的陪伴下，安詳離世。</strong>
+                <strong>我們敬愛的親人，黃徐玉珠夫人，於113年08月26日（一），於上午08時50分，家人的陪伴下，安詳離世。</strong>
             </p>
-                 <p>杖期夫 黃德堂 率 孝女 佳玲 親視含殮 遵禮成服 豎靈於 <strong> ［桃園 佛緣苑會館 牌位區 15號 ］</strong></p>
+                 <p>杖期夫 黃德堂 率 孝女 佳玲 親視含殮 遵禮成服 豎靈於 桃園佛緣苑會館 2F ［牌位區15號］。</p>
                  <p>將設奠於113年09月18日（三）舉行追思會儀式，感謝親友們在這段時間的慰問與關心，您的關懷和鼓勵，陪伴我們度過了這段艱難的時光。</p>
-                         <p><strong>敬邀您，與我們一同追思懷念政國先生，並向您獻上最深的敬意，感謝您。</strong></p>
+                         <p><strong>敬邀您，與我們一同追思懷念黃徐玉珠夫人，並向您獻上最深的敬意，感謝您。</strong></p>
                                             <p><strong>家人們，銘記在心，衷心感謝。</strong></p>
         </section>
+
         <!-- 訃告紙本部分 -->
         <section class="paper-obituary-section">
             <h2><strong>訃告正本</strong></h2>
-            <a href="李政國的訃聞.jpeg" data-lightbox="paper-obituary" data-title="訃聞紙本">
-                <img id="paper-obituary" src="李政國的訃聞.jpeg" alt="訃聞紙本">
+            <a href="徐玉珠的訃聞.jpeg" data-lightbox="paper-obituary" data-title="訃聞紙本">
+                <img id="paper-obituary" src="徐玉珠的訃聞.jpeg" alt="訃聞紙本">
             </a>
         </section>
 
@@ -97,17 +148,18 @@
             <div class="remembrance-details">
                 <div class="remembrance-item">
                     <h3><strong>豎靈地點</strong></h3>
-                    <p><strong> 桃園 佛緣苑會館 ［牌位區 15號 ］</strong></p>
-                    <p><strong>地址： 330桃園市桃園區大有路920號 </strong></p>
+                    <p><strong><a href="https://maps.app.goo.gl/mYwMejbz36H8MbuT9?g_st=com.google.maps.preview.copy" target="_blank">桃園佛緣苑 2F ［牌位區15號］</a></strong></p>
+                    <p><strong>桃園佛緣苑 2F ［牌位區15號］</strong></p>
+                    <p><strong>地址：330桃園市桃園區大有路920號 </strong></p>
                 </div>
                 <div class="remembrance-item">
                     <h3><strong>出殯地點</strong></h3>
-                    <p><strong><a href="https://maps.app.goo.gl/QSBKvW1ugdhQwJDd6?g_st=com.google.maps.preview.copy" target="_blank">桃園市立殯儀館 ［懷德廳］</a></strong></p>
+                    <p><strong><a href="https://maps.app.goo.gl/CkgJFhtxDVLmzzRS6?g_st=com.google.maps.preview.copy" target="_blank">桃園市立殯儀館 ［懷德廳］</a></strong></p>
                     <p><strong>地址：330桃園市桃園區大有路916號</strong></p>
                 </div>
                 <div class="remembrance-item">
                     <h3><strong>出殯日期</strong></h3>
-                    <p><strong>中華民國 113年09月18日（一）</strong></p>
+                    <p><strong>中華民國 113年09月18日（三）</strong></p>
                 </div>
                 <div class="remembrance-item">
                     <h3><strong>追思會時間</strong></h3>
@@ -115,7 +167,6 @@
                     <p><strong>上午 10:00 公奠禮</strong></p>
                 </div>
 
-        
                 <!-- 联系信息部分 -->
 <section id="contact-info">
     <h2><strong>聯絡電話</strong></h2>
@@ -144,50 +195,50 @@
     <!-- 花篮画廊，默认隐藏 -->
     <div id="flower-basket-gallery" style="display: none;">
         <div class="flower-basket-item">
-            <a href="image/花籃A.JPG" data-lightbox="flower-baskets" data-title="A款NT$2,500/1對">
-                <img src="image/花籃A.JPG" alt="花籃A">
+            <a href="花籃A.JPG" data-lightbox="flower-baskets" data-title="A款NT$2,500/1對">
+                <img src="花籃A.JPG" alt="花籃A">
             </a>
             <p class="price"><strong>A款NT$2,500/1對</strong></p>
         </div>
         <div class="flower-basket-item">
-            <a href="image/花籃B.JPG" data-lightbox="flower-baskets" data-title="B款NT$3,000/1對">
-                <img src="image/花籃B.JPG" alt="花籃B">
+            <a href="花籃B.JPG" data-lightbox="flower-baskets" data-title="B款NT$3,000/1對">
+                <img src="花籃B.JPG" alt="花籃B">
             </a>
             <p class="price"><strong>B款NT$3,000/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="image/花籃C.JPG" data-lightbox="flower-baskets" data-title="C款NT$3,500/1對">
-                <img src="image/花籃C.JPG" alt="花籃C">
+            <a href="花籃C.JPG" data-lightbox="flower-baskets" data-title="C款NT$3,500/1對">
+                <img src="花籃C.JPG" alt="花籃C">
             </a>
             <p class="price"><strong>C款NT$3,500/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="image/花籃D.JPG" data-lightbox="flower-baskets" data-title="D款NT$4,000/1對">
-                <img src="image/花籃D.JPG" alt="花籃D">
+            <a href="花籃D.JPG" data-lightbox="flower-baskets" data-title="D款NT$4,000/1對">
+                <img src="花籃D.JPG" alt="花籃D">
             </a>
             <p class="price"><strong>D款NT$4,000/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="image/花籃E.JPG" data-lightbox="flower-baskets" data-title="E款NT$4,500/1對">
-                <img src="image/花籃E.JPG" alt="花籃E">
+            <a href="花籃E.JPG" data-lightbox="flower-baskets" data-title="E款NT$4,500/1對">
+                <img src="花籃E.JPG" alt="花籃E">
             </a>
             <p class="price"><strong>E款NT$5,000/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="image/花籃F.JPG" data-lightbox="flower-baskets" data-title="F款NT$5,500/1對">
-                <img src="image/花籃F.JPG" alt="花籃F">
+            <a href="花籃F.JPG" data-lightbox="flower-baskets" data-title="F款NT$5,500/1對">
+                <img src="花籃F.JPG" alt="花籃F">
             </a>
             <p class="price"><strong>F款NT$5,500/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="image/花籃G.JPG" data-lightbox="flower-baskets" data-title="G款NT$6,000/1對">
-                <img src="image/花籃G.JPG" alt="花籃G">
+            <a href="花籃G.JPG" data-lightbox="flower-baskets" data-title="G款NT$6,000/1對">
+                <img src="花籃G.JPG" alt="花籃G">
             </a>
             <p class="price"><strong>G款NT$6,000/1對</strong></p>
         </div>
          <div class="flower-basket-item">
-            <a href="image/花籃H.JPG" data-lightbox="flower-baskets" data-title="H款NT$6,500/1對">
-                <img src="image/花籃H.JPG" alt="花籃H">
+            <a href="花籃H.JPG" data-lightbox="flower-baskets" data-title="H款NT$6,500/1對">
+                <img src="花籃H.JPG" alt="花籃H">
             </a>
             <p class="price"><strong>H款NT$6,500/1對</strong></p>
         </div>
@@ -197,14 +248,14 @@
 </section>
         <!-- 名片及分享按钮部分 -->
         <section id="business-card">
-            <img src="image/未命名設計.png" alt="名片" class="business-card-img">
+            <img src="未命名設計.png" alt="名片" class="business-card-img">
             <div id="share-buttons">
                 <p><strong>分享此頁面</strong></p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/XuYuzhu/" target="_blank" class="share-btn fb-share-btn">
-                    <img src="image/fb.png" alt="Share on Facebook">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiangan.github.io/Li-Zhengguo/" target="_blank" class="share-btn fb-share-btn">
+                    <img src="fb.png" alt="Share on Facebook">
                 </a>
-                <a href="https://line.me/R/msg/text/?https://shiangan.github.io/XuYuzhu/" target="_blank" class="share-btn line-share-btn">
-                    <img src="image/line.png" alt="Share on Line">
+                <a href="https://line.me/R/msg/text/?https://shiangan.github.io/Li-Zhengguo/" target="_blank" class="share-btn line-share-btn">
+                    <img src="line.png" alt="Share on Line">
                 </a>
             </div>
         </section>
