--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <body>
     <!-- 背景音乐 -->
     <audio id="background-music" autoplay loop hidden>
-        <source src="珍珠港事件.mp3" type="audio/mpeg">
+        <source src="千風之歌.mp3" type="audio/mpeg">
         您的浏览器不支持音频播放。
     </audio>
 
@@ -124,7 +124,7 @@
     <main>
         <!-- 主要照片部分 -->
         <section class="main-photo-section">
-            <img id="main-photo" src="李政國的主要照片.jpeg" alt="追思照片">
+            <img id="main-photo" src="徐玉珠的主要照片.jpeg" alt="追思照片">
             <p id="life-story">
                 <strong>我們敬愛的親人，黃徐玉珠夫人，於113年08月26日（一），於上午08時50分，家人的陪伴下，安詳離世。</strong>
             </p>
