--- a/index.html
+++ b/index.html
@@ -244,8 +244,33 @@
         </div>
         <!-- 其他花篮项... -->
     </div>
+    
     <p><br>訂購花籃請點選<a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank"><strong>這裡</strong></a>。</p>
 </section>
+
+               <style>#flower-basket-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
+.flower-basket-item {
+    max-width: 200px; /* 控制花籃圖片最大寬度 */
+    text-align: center;
+}
+
+.flower-basket-item img {
+    width: 100%;
+    height: auto; /* 保持圖片比例 */
+}
+
+.price {
+    margin-top: 10px;
+    font-size: 16px;
+}
+            
+</style>
         <!-- 名片及分享按钮部分 -->
         <section id="business-card">
             <img src="未命名設計.png" alt="名片" class="business-card-img">
