--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
     </audio>
 
     <header>
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="image/logo.png" alt="Logo" class="logo">
         <h1>黃徐玉珠 夫人 訃告</h1>
     </header>
 
     <main>
         <!-- 主要照片部分 -->
         <section class="main-photo-section">
-            <img id="main-photo" src="徐玉珠的主要照片.jpeg" alt="追思照片">
+            <img id="main-photo" src="image/徐玉珠的主要照片.jpeg" alt="追思照片">
             <p id="life-story">
                 <strong>我們敬愛的親人，黃徐玉珠夫人，於113年08月26日（一），於上午08時50分，家人的陪伴下，安詳離世。</strong>
             </p>
@@ -148,7 +148,7 @@
             <div class="remembrance-details">
                 <div class="remembrance-item">
                     <h3><strong>豎靈地點</strong></h3>
-                    <p><strong><a href="https://maps.app.goo.gl/mYwMejbz36H8MbuT9?g_st=com.google.maps.preview.copy" target="_blank">桃園佛緣苑 2F ［牌位區15號］</a></strong></p>
+                    <p><strong><a href="https://maps.app.goo.gl/mYwMejbz36H8MbuT9?g_st=com.google.maps.preview.copy" target="_blank">桃園［佛緣苑會館］</a></strong></p>
                     <p><strong>桃園佛緣苑 2F ［牌位區15號］</strong></p>
                     <p><strong>地址：330桃園市桃園區大有路920號 </strong></p>
                 </div>
