--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <main>
         <!-- 主要照片部分 -->
         <section class="main-photo-section">
-            <img id="main-photo" src="徐玉珠的主要照片.JPG" alt="追思照片">
+            <img id="main-photo" src="黃徐玉珠的主要照片.JPG" alt="追思照片">
             <p id="life-story">
                 <strong>我們敬愛的親人，黃徐玉珠夫人，於113年08月26日（一），於上午08時50分，家人的陪伴下，安詳離世。</strong>
             </p>
