--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
     <!-- 固定聯絡方式 -->
         <div id="fixed-links">
             <a href="tel:0938179858" class="bold">
-                <img src="24小時專線.png" alt="24小時服務電話" style="width: 70px; height: 30px;">
+                <img src="image/24小時專線.png" alt="24小時服務電話" style="width: 70px; height: 30px;">
             </a>
             <a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank" class="bold">
-                <img src="IMG_4177.webp" alt="LINE 聯絡我們" style="width: 50px; height: 50px;">
+                <img src="image/IMG_4177.webp" alt="LINE 聯絡我們" style="width: 50px; height: 50px;">
             </a>
         </div>
 <body>
@@ -188,11 +188,11 @@
             </div>
         </section>
 
-        <section id="thanks">
+        <section id="fade-in-text">
         <section></section>
 <p><strong>敬邀您，與我們一同追思懷念黃徐玉珠夫人，並向您獻上最深的敬意，感謝您。</strong></p>
                                             <p><strong>家人們，銘記在心，衷心感謝。</strong></p>
-        /secion>
+        </secion>
 
         
     <!-- 致贈花籃部分 -->
@@ -257,7 +257,8 @@
     <p><br>訂購花籃請點選<a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank"><strong>這裡</strong></a>。</p>
 </section>
 
-               <style>#flower-basket-gallery {
+     <style>
+ #flower-basket-gallery {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -289,7 +290,7 @@
                     <img src="fb.png" alt="Share on Facebook">
                 </a>
                 <a href="https://line.me/R/msg/text/?https://shiangan.github.io/Li-Zhengguo/" target="_blank" class="share-btn line-share-btn">
-                    <img src="line.png" alt="Share on Line">
+                    <img src="image/line.png" alt="Share on Line">
                 </a>
             </div>
         </section>
