--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <section></section>
 <p><strong>敬邀您，與我們一同追思懷念黃徐玉珠夫人，並向您獻上最深的敬意，感謝您。</strong></p>
                                             <p><strong>家人們，銘記在心，衷心感謝。</strong></p>
-        </secion>
+        </section>
 
         
     <!-- 致贈花籃部分 -->
