--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://shiangan.com/Shiangan/Liu-Jiren">
     <meta property="og:type" content="website">
     <title>訃聞公告</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="obituary.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
