--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <!-- 主要照片部分 -->
         <section class="main-photo-section">
-            <img id="main-photo" src="image/徐玉珠的主要照片.JPG" alt="追思照片">
+            <img id="main-photo" src="黃徐玉珠的主要照片.JPG" alt="追思照片">
             <p id="life-story">
                 <strong>我們敬愛的親人，黃徐玉珠夫人，於113年08月26日，早上08時50分，在家人的陪伴下，安詳離世。</strong>
             </p>
@@ -95,65 +95,9 @@
     to {
         opacity: 1;
     }
-}</style>
+}
+         </style>
 
-        <!-- 追思相片集 -->
-        <section>
-            <h2><strong>追思相片集</strong></h2>
-            <div class="slideshow">
-                <div class="slides">
-                    <div><img src="image/IMG_5394.jpeg" alt="照片1"></div>
-                    <div><img src="image/IMG_9495.jpeg" alt="照片2"></div>
-                </div>
-            </div>
-        </section>
-
-        <style>
-        /* 幻灯片容器 */
-        .slideshow {
-            width: 100%;
-            max-width: 80%; /* 确保幻灯片不会超出页面宽度 */
-            height: 50vh; /* 根据需求调整高度 */
-            overflow: hidden;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 auto; /* 居中对齐幻灯片 */
-            box-sizing: border-box; /* 包括内边距和边框在内的宽度和高度计算 */
-        }
-
-        /* 幻灯片内容 */
-        .slides {
-            display: flex;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            transition: transform 1s ease-in-out; /* 添加过渡效果 */
-        }
-
-        /* 每张幻灯片 */
-        .slides div {
-            flex-shrink: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        /* 幻灯片中的图片 */
-        .slides img {
-            width: 100%; /* 确保图片宽度适应容器 */
-            height: auto; /* 保持图片高度按比例缩放 */
-            max-height: 100%; /* 图片高度不能超过容器的高度 */
-            object-fit: contain; /* 确保图片适应容器且不会被裁剪 */
-        }
-    </style>
-</head>
-<body>
 
 
 <script>
