--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <p id="life-story">
                 <strong>我們敬愛的親人，黃徐玉珠夫人，於113年08月26日，早上08時50分，在家人的陪伴下，安詳離世。</strong>
             </p>
-            <p>杖期夫 黃德堂 率 孝女 佳玲 親視含殮 遵禮成服 豎靈於 桃園 佛緣苑會館 2F [牌位區15號]</p>
-            <p>將設奠於113年09月18日（三）舉行追思會儀式，感謝親友們的致意與陪伴，給予黃徐玉珠夫人最真切的祝福，家人們銘記在心，衷心感謝。</p>
+                                         <p>杖期夫 黃德堂 率 孝女 佳玲 親視含殮 遵禮成服 豎靈於 桃園 佛緣苑會館 2F [牌位區15號]</p>
+                           <p>將設奠於113年09月18日（三）舉行追思會儀式，感謝親友們的致意與陪伴，給予黃徐玉珠夫人最真切的祝福，家人們銘記在心，衷心感謝。</p>
         </section>
 
         <!-- 訃告紙本部分 -->
@@ -179,7 +179,8 @@
     <p><br>訂購花籃請點選<a href="https://line.me/ti/p/lAYTmfcqvp" target="_blank"><strong>這裡</strong></a>。</p>
 </section>
 
-        <style>#flower-basket-gallery {
+        <style>
+#flower-basket-gallery {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -240,7 +241,7 @@
     </main>
 
     <!-- 页脚 -->
-    <footer style="text-align: center;">
+    <footer>
     <p>承辦禮儀公司 祥安生命有限公司 ｜ 禮儀師：陳柏元</p>
     <p>© 2024 黃徐玉珠訃聞公告 | <span class="footer-signature">祥安生命有限公司</span> 版權所有 |</p>
 </footer>
