--- a/index.html
+++ b/index.html
@@ -84,6 +84,91 @@
             <p class="fade-in-text"><strong>聯繫電話 佳玲 tel:0973-035-148</strong> </p> 
         </div>
 
+            <style>
+        /* 页脚部分的样式 */
+        footer {
+            background-color: #f4f4f4; /* 背景颜色 */
+            padding: 20px; /* 内边距 */
+            text-align: center; /* 文本居中 */
+            font-family: Arial, sans-serif; /* 字体 */
+        }
+
+        footer p {
+            margin: 5px 0; /* 上下外边距 */
+            color: #333; /* 文字颜色 */
+        }
+
+        .footer-signature {
+            font-weight: bold; /* 字体加粗 */
+        }
+
+        .bold {
+            font-weight: bold; /* 字体加粗 */
+            text-decoration: none; /* 去掉链接下划线 */
+        }
+
+        footer img {
+            vertical-align: middle; /* 图标垂直对齐 */
+        }
+
+        footer a {
+            margin: 0 10px; /* 图标间距 */
+        }
+
+        .fade-in-text {
+    opacity: 0; /* 初始透明度为0 */
+    transition: opacity 2s ease-in-out; /* 渐变效果 */
+}
+
+        /* 幻灯片样式 */
+        .slideshow-container {
+            position: relative;
+            max-width: 100%; /* 确保幻灯片不会超出页面宽度 */
+            margin: auto;
+        }
+
+        .slide {
+            display: none; /* 隐藏幻灯片 */
+            text-align: center;
+        }
+
+        .slide img {
+            width: 100%; /* 确保图片适应幻灯片容器 */
+            height: auto; /* 保持图片比例 */
+        }
+
+        .prev, .next {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            width: auto;
+            padding: 16px;
+            margin-top: -22px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 18px;
+            transition: 0.6s ease;
+            border-radius: 0 3px 3px 0;
+            user-select: none;
+        }
+
+        .next {
+            right: 0;
+            border-radius: 3px 0 0 3px;
+        }
+
+        .prev:hover, .next:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+
+        /* 响应式设计：在小屏幕上的页脚样式 */
+        @media (max-width: 768px) {
+            footer {
+                font-size: 12px; /* 小屏幕上的字体大小 */
+                padding: 15px; /* 内边距稍微缩小 */
+            }
+        }
+    </style>
 
 
 <script>
@@ -232,41 +317,7 @@
     <p>© 2024 黃徐玉珠訃聞公告 | <span class="footer-signature">祥安生命有限公司</span> 版權所有 |</p>
 </footer>
 
-     <style> /* 页脚部分的样式 */
-        footer {
-            background-color: #f4f4f4; /* 背景颜色 */
-            padding: 20px; /* 内边距 */
-            text-align: center; /* 文本居中 */
-            font-family: Arial, sans-serif; /* 字体 */
-        }
-
-        footer p {
-            margin: 5px 0; /* 上下外边距 */
-            color: #333; /* 文字颜色 */
-        }
-
-        .footer-signature {
-            font-weight: bold; /* 字体加粗 */
-        }
-
-        .bold {
-            font-weight: bold; /* 字体加粗 */
-            text-decoration: none; /* 去掉链接下划线 */
-        }
-
-        footer img {
-            vertical-align: middle; /* 图标垂直对齐 */
-        }
-
-        footer a {
-            margin: 0 10px; /* 图标间距 */
-        }
-
-        .fade-in-text {
-    opacity: 0; /* 初始透明度为0 */
-    transition: opacity 2s ease-in-out; /* 渐变效果 */
-}</style>
-
+     
     <!-- JavaScript -->
     <script>
             window.onload = function() {
