--- a/index.html
+++ b/index.html
@@ -251,28 +251,45 @@
 </section>
 
         <style>
-#flower-basket-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-}
-
 .flower-basket-item {
-    max-width: 200px; /* 控制花籃圖片最大寬度 */
+    max-width: 180px; /* 调整最大宽度为180px */
     text-align: center;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    background-color: #fff;
+    margin: 10px; /* 在项目四周添加10像素的外边距，避免过于拥挤 */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* 添加过渡效果 */
 }
 
 .flower-basket-item img {
     width: 100%;
-    height: auto; /* 保持圖片比例 */
+    height: auto;
+    display: block;
+    margin: 0 auto; /* 图片居中 */
 }
 
 .price {
     margin-top: 10px;
     font-size: 16px;
+    font-weight: bold;
+    color: #333; /* 确保文字颜色与背景有良好的对比 */
+    text-align: center; /* 价格文本居中 */
 }
-            
+
+/* 悬停效果 */
+.flower-basket-item:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transform: scale(1.05); /* 略微放大效果 */
+}
+
+/* 响应式设计 - 小屏幕适配 */
+@media (max-width: 480px) {
+    .flower-basket-item {
+        max-width: 100%; /* 在小屏幕上让项目占满可用空间 */
+    }
+}
 </style>
 
     <script>
