--- a/index.html
+++ b/index.html
@@ -251,31 +251,32 @@
 </section>
 
         <style>
+
+/* 致赠花篮部分 */
+#donate-flower {
+    margin-bottom: 20px;
+}
+
+#flower-basket-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
 .flower-basket-item {
-    max-width: 180px; /* 调整最大宽度为180px */
+    max-width: 200px;
     text-align: center;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 10px;
-    background-color: #fff;
-    margin: 10px; /* 在项目四周添加10像素的外边距，避免过于拥挤 */
-    transition: transform 0.3s ease, box-shadow 0.3s ease; /* 添加过渡效果 */
 }
 
 .flower-basket-item img {
     width: 100%;
     height: auto;
-    display: block;
-    margin: 0 auto; /* 图片居中 */
 }
 
 .price {
     margin-top: 10px;
     font-size: 16px;
-    font-weight: bold;
-    color: #333; /* 确保文字颜色与背景有良好的对比 */
-    text-align: center; /* 价格文本居中 */
 }
 
 /* 悬停效果 */
