--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
     <meta property="og:title" content="黃徐玉珠夫人訃告">
     <meta property="og:description" content="追思黃徐玉珠夫人-祥安生命雲端訃告-敬邀您一同追思緬懷我們摯愛的親人,黃徐玉珠">
-    <meta property="og:image" content="https://shiangan.com/Shiangan/徐玉珠/image/logo.jpg">
-    <meta property="og:url" content="https://shiangan.com/Shiangan/徐玉珠">
+    <meta property="og:image" content="https://shiangan.com/Shiangan/XuYuzhu/image/logo.jpg">
+    <meta property="og:url" content="https://shiangan.com/Shiangan/XuYuzhu">
     <meta property="og:type" content="Shiangan-obituary">
 </head>
     <title>訃聞公告</title>
@@ -42,8 +42,8 @@
         <!-- 訃告紙本部分 -->
         <section class="paper-obituary-section">
             <h2><strong>訃告正本</strong></h2>
-            <a href="徐玉珠訃聞.JPG" data-lightbox="paper-obituary" data-title="訃聞紙本">
-                <img id="paper-obituary" src="徐玉珠訃聞.JPG" alt="訃聞紙本">
+            <a href="徐玉珠訃聞.jpeg" data-lightbox="paper-obituary" data-title="訃聞紙本">
+                <img id="paper-obituary" src="徐玉珠訃聞.jpeg" alt="訃聞紙本">
             </a>
         </section>
 
@@ -53,6 +53,7 @@
             <div class="remembrance-details">
                 <div class="remembrance-item">
                     <h3><strong>豎靈地點</strong></h3>
+                    <p><strong><a href="https://maps.app.goo.gl/Gy4b5KzT3Z6YGmXB8?g_st=com.google.maps.preview.copy" target="_blank">桃園市立殯儀館 [ 懷德廳 ]</a></strong></p>
                     <p><strong>桃園 佛緣苑會館 2F [牌位區15號]</strong></p>
                     <p><strong>地址：330桃園市桃園區大有路920號</a></strong></p>
                 </div>
@@ -79,7 +80,7 @@
         <!-- 感謝信息部分 -->
         <div class="remembrance-thanks">
             <p class="fade-in-text"><strong>感謝親友們在這段時間的慰問與關心，您的關懷和鼓勵，陪伴我們度過了這段艱難的時光。</strong></p>
-            <p class="fade-in-text"><strong> 敬邀您，與我們一同追思懷念及人先生的美好回憶，並向您獻上最深的敬意。</strong></p>
+            <p class="fade-in-text"><strong> 敬邀您，與我們一同追思懷念黃徐玉珠的美好回憶，並向您獻上最深的敬意。</strong></p>
             <p class="fade-in-text"><strong>謝謝您！鞠躬。</strong></p>
             <p class="fade-in-text"><strong>聯繫電話 佳玲 tel:0973-035-148</strong> </p> 
         </div>
@@ -247,7 +248,7 @@
         </div>
         <!-- 依此类推 -->
     </div>
-    <p><br>訂購花籃請點選<a href="https://line.me/ti/p/lAYTmfcqvp" target="_blank"><strong>這裡</strong></a>。</p>
+    <p><br>訂購花籃請點選<a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank"><strong>這裡</strong></a>。</p>
 </section>
 
         <style>
@@ -309,7 +310,7 @@
             <a href="tel:0938179858" class="bold">
                 <img src="image/24小時專線.png" alt="24小時服務電話" style="width: 70px; height: 30px;">
             </a>
-            <a href="https://line.me/ti/p/lAYTmfcqvp" target="_blank" class="bold">
+            <a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank" class="bold">
                 <img src="image/IMG_4177.webp" alt="LINE 聯絡我們" style="width: 50px; height: 50px;">
             </a>
         </div>
