--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 }
 
 .flower-basket-item img {
-    width: 100%;
+    width: 80%;
     height: auto;
 }
 
@@ -311,7 +311,7 @@
                 <img src="image/24小時專線.png" alt="24小時服務電話" style="width: 70px; height: 30px;">
             </a>
             <a href="https://line.me/ti/p/TuM5y_Of6I" target="_blank" class="bold">
-                <img src="image/IMG_4177.webp" alt="LINE 聯絡我們" style="width: 50px; height: 50px;">
+                <img src="IMG_4177.webp" alt="LINE 聯絡我們" style="width: 50px; height: 50px;">
             </a>
         </div>
 
