--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="remembrance-details">
                 <div class="remembrance-item">
                     <h3><strong>豎靈地點</strong></h3>
-                    <p><strong><a href="https://maps.app.goo.gl/nrjV9YHrTAE9bbMX9?g_st=com.google.maps.preview.copy" target="_blank">桃園市立殯儀館 [ 懷德廳 ]</a></strong></p>
-                    <p><strong>桃園 佛緣苑會館 2F [牌位區15號]</strong></p>
+                    <p><strong><a href="https://maps.app.goo.gl/nrjV9YHrTAE9bbMX9?g_st=com.google.maps.preview.copy" target="_blank">桃園 佛緣苑會館</a></strong></p>
+                    <p><strong>桃園 佛緣苑會館 2F [ 牌位區15號 ]</strong></p>
                     <p><strong>地址：330桃園市桃園區大有路920號</a></strong></p>
                 </div>
                 <div class="remembrance-item">
