--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p class="fade-in-text"><strong>感謝親友們在這段時間的慰問與關心，您的關懷和鼓勵，陪伴我們度過了這段艱難的時光。</strong></p>
             <p class="fade-in-text"><strong> 敬邀您，與我們一同追思懷念黃徐玉珠的美好回憶，並向您獻上最深的敬意。</strong></p>
             <p class="fade-in-text"><strong>謝謝您！鞠躬。</strong></p>
-            <p class="fade-in-text"><strong>聯繫電話 佳玲 tel:0973-035-148</strong> </p> 
+            <p class="fade-in-text"><strong>聯繫電話 📞 佳玲 0973-035-148 </strong> </p> 
         </div>
 
             <style>
